bugfix: edit modal size on mobile, adding blur when user press enter on mobile to close the the keyboard

--- a/src/components/Pomodoro/Pomodoro.module.css
+++ b/src/components/Pomodoro/Pomodoro.module.css
@@ -9,7 +9,7 @@
     align-items: center;
     gap: 12px;
     background-color: red;
-    padding: 16px 66px;
+    padding: 16px 32px;
 }
 
 .action {
